# Tecnicas-de-Programacion-Concurrente-I-7559

./: .gitattributes  .gitignore  README.md
CLASES/PRACTICO/02 - Ejercicio/: DAG.drawio
CLASES/PRACTICO/OLD/: 01 - intro-rust.tar.bz2  02 - threads-locks.tar.bz2  03 - semaforos-barriers.tar.bz2  04 - condvars.tar.bz2  05 - forkjoin.tar.bz2  06 - async.tar.bz2  07 - actores.tar.bz2  08 - practica-sockets.tar.bz2  09 - leader.tar.bz2  10 - transacciones.tar.bz2  ESP I - testing.tar.bz2
CLASES/TEORICO/: NOTAS.docx  NOTAS.gdoc  notes.gdoc
CLASES/TEORICO/OLD/: 02 - Locks.tar.bz2  02 - SmartPointers.tar.bz2  03 - Barriers.tar.bz2  03 - Semaforos.tar.bz2  05 - forkjoin.tar.bz2  07 - Channels.tar.bz2  08 - sockets.tar.bz2
CODIGO/assync/: Cargo.toml
CODIGO/assync/src/: con.rs  main.rs  seq.rs
CODIGO/fork_join/: Cargo.toml
CODIGO/fork_join/src/: con.rs  main.rs  seq.rs
CODIGO/mutex/: out.txt
CODIGO/semaphores/: Cargo.toml
CODIGO/semaphores/src/: main.rs
CODIGO/tokkio/: Cargo.toml
CODIGO/tokkio/src/: client.rs  server.rs
RESUMENES/: SUMMARY.gdoc
TPS/: Diagrama de Clases.drawio  Diagrama de Secuencia.drawio  Presentacion - _undefined.gslides  Presentacion - _undefined.pptx  Protocolo.drawio
assync/: Cargo.toml  salida.txt  salida2.txt
assync/src/: main.rs
fork_join/src/: con.rs  main.rs  mod.rs  seq.rs
lock/: Cargo.toml
lock/src/: main.rs
locks/src/: main.rs
monitors/: Cargo.toml
monitors/src/: main.rs
mutex/src/: main.rs
