[package]
name = "assync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12.0", default-features = false, features = ["client-reqwest", "reqwest-native-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.106"
async-std = { version = "1", features = ["attributes", "tokio1"] }
futures = "0.3.28"
